UF-15206: Changes after review feedback
